# daad_trabajo

./: README.md  dosbox-0.74.conf
DSK/: DISK30 amstrad.DSK
HDD/ARJ/: ARJ.DOC  ARJSORT.BAT  ARJSORT.COM  ARJSORT.DOC  ARJ_BBS.DOC  CREDIT.CRD  LICENSE.DOC  ORDERFRM.DOC  README.DOC  REARJ.CFG  REARJ.DOC  UPDATE.DOC  WHATSNEW.DOC  WHY_ARJ.DOC
HDD/DAAD/: CINTA.BAK  CINTA.TAP  TOSPEC1.BAT  graficos.TAP
HDD/DAAD/GFX/: GFXREAD.ME
HDD/DAAD/PAJARITO/: PAJARITO.SCE  PART1.CGA  PART1.DDB
HDD/DAAD/TEMPLOS1/: LEE.ME  T1.DDB  T1.SCE  T1B.TOK  T1B.TXT  T1S.TOK  T1S.TXT  TD.SCE  (+3 more)
HDD/QEDIT/: LEEME  MYKEY.DEF  Q.COM  Q.HLP  QCONFG.COM  QEDIT.DOC  QKEY.DEF  READ.ME  WSKEY.DEF
JavaCPC_2.9.5e/: README.TXT  RasterScreen.asm  alphaville.bat
JavaCPC_2.9.5e/temp/: temp0.dsk
arnold_tng/: README.FIRST  arnold  arnold_readme.txt  gpl-spanish.htm  leeme.linux  leeme.txt  novedades.linux  test.dsk  whatsnew.linux
arnold_tng/ARNOLDX/: arnoldx.dsw  arnoldx.txt
arnold_tng/docs/: INFO.TXT  stsound-readme.txt
arnold_tng/reg/: reg.dsp  reg.dsw
arnold_tng/src/: Makefile  Makefile.in  arnold.dsp  arnold.exe.manifest  arnolddll.dsp  arnoldlib.dsp  config.status  configure  configure.in  makefile.gba  makefile.w32
arnold_tng/src/CONTRIB/INCLUDE/: emushell.hpp  emushell.inl
arnold_tng/src/autom4te.cache/: output.1  requests  traces.0  traces.1
arnold_tng/src/cpc/: arnold.c
arnold_tng/src/unix/: display.h  display_sdl.c  host.c  keyboard_sdl.c  main.c
arnold_tng/src/win/: cassdlg.c  cassdlg.h  chtdb.c  chtdb.h  cmdline.c  cmdline.h  comboh.h  cpcemu.h  debugger.c  debugger.h  dispcfg.c  file_list.c  file_list.h  filedlg.c  filedlg.h  filetool.c  global.h  ifacegen.c  ifacegen.h  joy.h  keystack.c  libpngw.c  libpngw.h  mess.h  multcfg.c  mylistvw.h  precomp.h  ramromcfg.c  reg.c  reg.h  resource.h  romcfg.h  scrsnap.c  scrsnap.h  win.c  win.h  ym5prop.c  zipsupport.h  zipsupui.c  zipsupui.h
arnold_tng/src/win/DLL/: dll.c  dll.def  dll.h
arnold_tng/src/win/directx/: dd.h  di.h  dinput.c  ds.h  graphlib.h
arnold_tng/src/win/unused/: iface.c  iface.h
zxspin0.666/: Default.spincfg  spin.ini
(+26 files in other folders)
