dnl Process this file with autoconf to produce a configure script.
AC_INIT(unix/main.c)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for endianness
AC_C_BIGENDIAN

dnl Checks for target
AC_CANONICAL_SYSTEM

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
dnl AC_CHECK_LIB(X11, main)
dnl Replace `main' with a function in -lXext:
dnl AC_CHECK_LIB(Xext, main)
dnl Replace `main' with a function in -libs:
dnl AC_CHECK_LIB(ibs, main)
dnl AM_PATH_GTK(1.2.0,AC_DEFINE(HAVE_GTK),AC_MSG_RESULT(GTK GUI will not be built!))
AM_PATH_GTK_2_0(2.2.0,AC_DEFINE(HAVE_GTK),AC_MSG_RESULT(GTK GUI will not be built!))
AM_PATH_SDL(1.2.0,AC_DEFINE(HAVE_SDL),AC_MSG_RESULT(SDL will be disabled. Using plain X11 code instead!))
AC_ARG_WITH([alsa],
	[AS_HELP_STRING([--without-alsa],[disable ALSA sound output method])],
	[],
	[AM_PATH_ALSA(1.0.0,AC_DEFINE(HAVE_ALSA),AC_MSG_RESULT(ALSA will be disabled.))])
AC_CHECK_HEADER(sys/soundcard.h,AC_DEFINE(HAVE_SYS_SOUNDCARD_H),AC_MSG_RESULT(OSS sound support will not be built!))
AC_ARG_WITH([pulse],
	[AS_HELP_STRING([--without-pulse],[disable PULSE sound output method])],
	[],
	[AC_CHECK_HEADER(pulse/simple.h,AC_SUBST(HAVE_PULSE,1),AC_MSG_RESULT(PULSE will be disabled.))])
if test "x$HAVE_PULSE" = "x1" ; then
	AC_DEFINE(HAVE_PULSE)
	AC_MSG_CHECKING(for PULSE CFLAGS)
	PULSE_CFLAGS="-D_REENTRANT"
	AC_MSG_RESULT($PULSE_CFLAGS)
	AC_MSG_CHECKING(for PULSE LDFLAGS)
	PULSE_LIBS="-lpulse-simple -lpulse"
	AC_MSG_RESULT($PULSE_LIBS)
fi
AC_SUBST(PULSE_CFLAGS)
AC_SUBST(PULSE_LIBS)

dnl Checks for header files.
AC_PATH_X
AC_SUBST(x_includes)
AC_SUBST(x_libraries)
dnl AC_HEADER_STDC
dnl AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl AC_C_CONST
dnl AC_TYPE_SIZE_T
dnl AC_HEADER_TIME

dnl Checks for library functions.
dnl AC_PROG_GCC_TRADITIONAL
dnl AC_FUNC_MEMCMP
dnl AC_TYPE_SIGNAL
dnl AC_CHECK_FUNCS(getcwd gettimeofday select)

AC_OUTPUT(Makefile)
